<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntentHW</string>
    <string name="author_label">by Brian Kim for ECE5480</string>
    <string name="date_label">9/24/2014</string>

    <string name="main_activity_description_label">The input field below will store information in the form of a string to the next activity</string>
    <string name="main_activity_info_editText_hint">Enter some information</string>
    <string name="main_activity_run_button">run intent</string>

    <string name="button_activity_description_label">The EditText below should contain information from the previous activity.</string>
    <string name="button_activity_info_editText_hint">information from prev Activity</string>
    <string name="button_activity_run_button">send info to calling activity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_button_clicked">ButtonClickedActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
